# rmi

./: .gitignore  README.md  answer.md  pyproject.toml  setup.py  test_time.py  tox.ini
c_src/: c_rmi.cpp
src/rmi/: __init__.py  c_rmi.pyi
tests/: test_rmi.py
