[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rmi"
authors = [
    {name = "Fernando Ribeiro Alves", email = "fernandoribeiro889@gmail.com"}
]
keywords = ["cpython", "performance", "python", "list"]
version = "0.0.1"
requires-python = ">=3.9"
license = {text = "MIT License"}
dynamic = [
    "readme",
    "dependencies",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
repository = "https://github.com/ffernandoalves/rmi"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]
# pythonpath = "src"